Ported remaining code to Java 11